--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bulma-styled-components": "^1.0.2",
     "hookrouter": "^1.0.3-beta",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
-    "react-scripts": "^2.1.8",
-    "styled-components": "^3.3.0"
+    "react-scripts": "^2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
