--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "hookrouter": "^1.0.3-beta",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
-    "react-scripts": "^2.1.8"
+    "react-scripts": "^2.1.8",
+    "use-dark-mode": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
