--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "hookrouter": "^1.0.3-beta",
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
-    "react-scripts": "^2.1.8",
+    "hookrouter": "^1.2.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.1",
     "use-dark-mode": "^2.3.1"
   },
   "scripts": {
@@ -25,7 +25,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint-plugin-html": "^5.0.3",
-    "eslint-plugin-react-hooks": "^1.6.0"
+    "eslint-plugin-html": "^6.0.2",
+    "eslint-plugin-react-hooks": "^4.0.8"
   }
 }
